--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,16 +1,26 @@
+<!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1">
+
+    <title>Hello World</title>
+
+    <style>
+      body {
+        border: 1px solid black;
+      }
+    </style>
+
+    <!-- Inline scripts are forbidden in Firefox OS apps (CSP restrictions),
+         so we use a script file. -->
+    <script src="app.js" defer></script>
+
+  </head>
+
   <body>
-    <p>Packaged app installation page</p>
-    <script>
-      // This URL must be a full url.
-      var manifestUrl = 'https://dl.dropboxusercontent.com/content_link/AvYrUUS4MotRdJrpZqpgqVQwmVVu32hk2PpgrQeOJChrK6fgBw8s92rPZdZjxYH5?dl=1';
-      var req = navigator.mozApps.installPackage(manifestUrl);
-      req.onsuccess = function() {
-        alert(this.result.origin);
-      };
-      req.onerror = function() {
-        alert(this.error.name);
-      };
-    </script>
+    <!-- This code is in the public domain. Enjoy! -->
+    <h1>Hello World</h1>
   </body>
+
 </html>
